Update warnings